--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="style.css">
 	<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
 
-	<style>#admin,#exist { display: none; }</style>
+	<style>#admin,#exist,#server { display: none; }</style>
 
 	<script type="text/javascript">
 		let selected = 0;
